src/styles.css
/* ... */
.performance-name {
  width: 200px;
  transition: color 0.15s;
  cursor: default !important;
}

.performance-name-engine {
  width: 300px;
  transition: color 0.15s;
  cursor: default !important;
}

.custom-progress {
  width: 603px;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: 50px;
}

.name-H2H {
  width: 100%;
  transition: color 0.15s;
  cursor: default !important;
  text-align: center;
}

.only-name {
  transition: color 0.15s;
}

#bestrh2h .name-H2H,
#raceh2h .name-H2H,
#qualih2h .name-H2H {
  display: flex;
  justify-content: space-between;
}

.custom-H2H {
  width: 75%;
  display: flex;
  flex-direction: row;
  background-color: var(--h2h-back);
  height: 7px;
  margin-top: 5px;
}

.driver1-bar {
  float: right;
  width: 0%;
  height: 7px;
  transition: width 0.15s;
}

.h2h-top {
  display: flex;
  flex-direction: row;
  justify-content: space-between
}

.driver2-bar {
  float: left;
  width: 0%;
  height: 7px;
  transition: width 0.15s;
}

.driver2-space,
.driver1-space {
  width: 50%;
  background-color: var(--background);
  height: 7px;
}

i.disabled {
  pointer-events: none;
  color: var(--disabled-text);
}

input.disabled {
  pointer-events: none;
  color: var(--disabled-text);
}

.red-part {
  width: 300px;
  height: 3px;
  background-color: var(--negative-general);
  position: relative;
}

.disabled-part {
  width: 300px;
  height: 3px;
  background-color: var(--background-general);
  position: relative;
}

.disabled-part-engine {
  width: 100%;
  height: 3px;
  background-color: var(--background-general);
  position: relative;
}

.green-part {
  width: 0%;
  height: 100%;
  background-color: var(--positive-general);
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  transition: width 0.15s;
}

.white-part {
  width: 0%;
  height: 100%;
  background-color: #f0f0f0;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  transition: width 0.15s;
}

.separation-zone {
  width: 3px;
  height: 10px;
  background-color: #f0f0f0;
}

.gray-part {
  width: 100%;
  height: 100%;
  background-color: var(--background-general);
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  transition: width 0.15s;
}

.car-info {
  font-size: 14px;
}

body.og-theme .teams-columns,
body.og-theme .records-list {
  padding: 12px 10px;
}

.teams-columns {
  display: flex;
  flex-direction: column;
  overflow-y: hidden;
  margin-left: 0%;
  margin-right: 14px;
  background: transparent;
  box-shadow: none;
  gap: 10px;
}

.performance-bar {
  width: 300px;
}

.performance-section {
  overflow: hidden;
  margin-left: 0%;
  margin-right: 14px;
  display: flex;
  height: 100%;
}

.btn-number {
  background-color: transparent !important;
  color: var(--white-general) !important;
  padding-left: 0px !important;
  border: none !important;
}

.collapse-number {
  color: var(--white-general);
  background-color: var(--custom-modal-back);
}

.contract-details {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  color: var(--white-general);
}

.number-and-contract {
  display: flex;
  flex-direction: column;
  background-color: var(--custom-modal-back);
}

.custom-body {
  color: var(--text-general);
  background-color: var(--generals);
  z-index: -2;
  padding: 0px 20px 5px 20px;
}

.pos-relative {
  position: relative;
}


.custom-modal {
  min-width: 600px !important;
  z-index: 2000 !important;
  border-radius: 10px !important;
}

#patreonModal .custom-modal,
#patreonModal .modal-dialog {
  min-width: 800px !important;
}


.drivers-modal-zone,
.teams-modal-zone {
  border-radius: 10px;
  width: 100%;
  display: grid;
  gap: 12px;
  background-color: transparent;
  grid-template-columns: repeat(4, 1fr);
}


.contract-details div {
  color: var(--text-general);
}

.custom-header {
  color: var(--white-general) !important;
  background-color: var(--generals) !important;
  display: flex;
  justify-content: space-between;
  border-bottom: none !important;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
}


.custom-footer {
  color: var(--white-general) !important;
  background-color: var(--generals) !important;
  z-index: -3;
  border-top: none !important;
  padding: 5px 5px;
}

::-webkit-input-placeholder {
  color: #999;
  /* Cambia el color del texto del placeholder */
}

.rounded-input {
  border: 2px solid transparent;
  border-radius: 10px;
  padding: 8px 12px;
  max-width: 210px;
  outline: none;
  transition: border-color 0.15s;
  background-color: var(--mid-gray-contrast);
  color: #ebeaf0;
}

.rounded-input.retirement {
  max-width: 75px;
}

.rounded-input.retirement::selection,
.modal-subtitle::selection,
#difficultySpan::selection {
  background-color: transparent;
}


.driver1-number::selection,
.driver2-number::selection {
  background-color: transparent;
}

.custom-disabled {
  background-color: -internal-light-dark(rgba(239, 239, 239, 0.3), rgba(59, 59, 59, 0.3));
}


.rounded-input:hover {
  border-color: #cecece;
}

.rounded-input:focus {
  outline: 0px solid transparent;
  border-color: var(--white-general);
  color: var(--white-general);
}

.confirm-area {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 50px;
}

.performance-data {
  margin-left: 30px;
  font-size: 26px;
  width: 200px;
  text-align: center;
}

.team,
.engine {
  border: 2px solid transparent;
  border-radius: 10px;
  padding: 4.8px;
  cursor: pointer !important;
  margin: 10px;
  color: var(--text-general);
  transition: border-color 0.15s, color 0.15s, background-color 0.15s;
  position: relative;
  font-size: 18px;
}

.team {
  margin: 0;
  border: none;
  padding: 5.8px;
  transition: box-shadow 0.15s;
}

.team.selected {
  box-shadow: var(--shadow-s);
}
/* ... */

